<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/light_steel_blue">

    <Button
        android:id="@+id/btnC"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_c"
        app:layout_constraintBottom_toTopOf="@+id/btnSeven"
        app:layout_constraintEnd_toStartOf="@+id/btnBack"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/btn_back"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintStart_toEndOf="@+id/btnC" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_delete"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnBack" />

    <Button
        android:id="@+id/btnSeven"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_seven"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/btn_eight"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/button10"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintStart_toEndOf="@+id/btnSeven" />

    <Button
        android:id="@+id/button7"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_nine"
        app:layout_constraintBottom_toTopOf="@+id/button11"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_multiplication_sign"
        app:layout_constraintBottom_toTopOf="@+id/button12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_four"
        app:layout_constraintBottom_toTopOf="@+id/button13"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_five"
        app:layout_constraintBottom_toTopOf="@+id/button14"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button9" />

    <Button
        android:id="@+id/button11"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_six"
        app:layout_constraintBottom_toTopOf="@+id/button15"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintStart_toEndOf="@+id/button10" />

    <Button
        android:id="@+id/button12"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_minus"
        app:layout_constraintBottom_toTopOf="@+id/button16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button11" />

    <Button
        android:id="@+id/button13"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_one"
        app:layout_constraintBottom_toTopOf="@+id/btnPlusAndMinus"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button14"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_two"
        app:layout_constraintBottom_toTopOf="@+id/button18"
        app:layout_constraintEnd_toStartOf="@+id/button15"
        app:layout_constraintStart_toEndOf="@+id/button13" />

    <Button
        android:id="@+id/button15"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_tree"
        app:layout_constraintBottom_toTopOf="@+id/button19"
        app:layout_constraintEnd_toStartOf="@+id/button16"
        app:layout_constraintStart_toEndOf="@+id/button14" />

    <Button
        android:id="@+id/button16"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_plus"
        app:layout_constraintBottom_toTopOf="@+id/button20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button15" />

    <Button
        android:id="@+id/btnPlusAndMinus"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/btn_plus_and_minus"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button18"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button18"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/btn_null"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button19"
        app:layout_constraintStart_toEndOf="@+id/btnPlusAndMinus" />

    <Button
        android:id="@+id/button19"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_comma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button20"
        app:layout_constraintStart_toEndOf="@+id/button18" />

    <Button
        android:id="@+id/button20"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:textSize="25sp"
        android:text="@string/btn_equal_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button19" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/light_steel_blue"
        android:text="0"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>